--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,14 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-Tactics/[Ll]ibrary/
-Tactics/[Tt]emp/
-Tactics/[Oo]bj/
-Tactics/[Bb]uild/
-Tactics/[Bb]uilds/
-Tactics/[Ll]ogs/
-Tactics/[Uu]ser[Ss]ettings/
+[Ll]ibrary/
+[Tt]emp/
+[Oo]bj/
+[Bb]uild/
+[Bb]uilds/
+[Ll]ogs/
+[Uu]ser[Ss]ettings/
+.gitignore
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
